--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -805,6 +805,7 @@ $price-table-border: solid 1px #333;
 
 // We use these to control the title styles
 // $price-title-bg: #333;
+// $price-title-bg: #ba2e00;
 // $price-title-padding: rem-calc(15 20);
 // $price-title-align: center;
 // $price-title-color: #eee;
@@ -1148,6 +1149,8 @@ $price-cta-padding: rem-calc(10);
 // Background color for the top bar
 // $topbar-bg-color: #333;
 // $topbar-bg: $topbar-bg-color;
+
+// $topbar-bg-color: #ba2e00;
 
 // Height and margin
 // $topbar-height: 45px;
