--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,14 +74,14 @@
 
   <!-- Footer -->
   <div class="row" id="footer">
-    <div class="small-8 columns">
+    <div class="small-12 medium-8 columns">
         <h3>At Fannetic, we love sports more than anything.</h3>
         <p>However after moving to NYC from Chicago and San Francisco, we missed our teams. Sure we could catch the games on TV, or at some nearby sports bar, but we really missed the atmosphere. There is nothing like cheering with your friends and like-minded fans around you.</p>
 
         <h3>That’s why we created Fannetic.</h3>
         <p>To share the pain and the glory, and have a great time along the way. We are recreating the stadium effect by connecting all types of sports fans, so let us know if you have an event that you need to see with your fellow fans.</p>
     </div>
-    <div class="small-4 columns">
+    <div class="small-12 medium-4 columns">
       <h3>Contact Us</h3>
       <p>If you have any questions or suggestions, please do not hesitate to email <%= mail_to "hello@fannetic.com", nil, :encode => "javascript" %></p>
 
