--- a/app/views/perks/edit.html.erb
+++ b/app/views/perks/edit.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="small-12 columns">
     <h1>Edit Perk</h1>
-    <%= form_for :tier, url: team_event_tier_path(@team,@event,@tier), method: :patch do |f| %>
+    <%= form_for :perk, url: team_event_perk_path(@team,@event,@perk), method: :patch do |f| %>
 
-    	<% if @tier.errors.any? %>
+    	<% if @perk.errors.any? %>
       	<div id="error_explanation">
-      		<h2><%= pluralize(@tier.errors.count, "error") %> prohibited this event from being saved:</h2>
+      		<h2><%= pluralize(@perk.errors.count, "error") %> prohibited this event from being saved:</h2>
 
       		<ul>
-        		<% @tier.errors.full_messages.each do |msg| %>
+        		<% @perk.errors.full_messages.each do |msg| %>
         			<li><%= msg %></li>
         		<% end %>
       		</ul>
