--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -324,13 +324,18 @@ $header-top-margin: 1rem;
 
 // We use these to build padding for buttons.
 // $button-tny: rem-calc(10);
+$button-tny: rem-calc(3);
 // $button-sml: rem-calc(14);
+$button-sml: rem-calc(8);
 // $button-med: rem-calc(16);
+$button-med: rem-calc(10);
 // $button-lrg: rem-calc(18);
+$button-lrg: rem-calc(14);
 
 // We use this to control the display property.
 // $button-display: inline-block;
 // $button-margin-bottom: rem-calc(20);
+$button-margin-bottom: rem-calc(4);
 
 // We use these to control button text styles.
 // $button-font-family: $body-font-family;
@@ -437,6 +442,7 @@ $header-top-margin: 1rem;
 // $dropdown-button-pip-color: #fff;
 // $dropdown-button-pip-color-alt: #333;
 
+// $button-pip-tny: rem-calc(6);
 // $button-pip-tny: rem-calc(6);
 // $button-pip-sml: rem-calc(7);
 // $button-pip-med: rem-calc(9);
