--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
               </ul>
 
               <ul class="right">
+                <li><%= link_to("Admin", admins_path) if current_fan.try(:is_admin?) %>
                 <li><%= link_to("Logout", :destroy_user_session) if fan_signed_in? %>
               </ul>
             </section>
