--- a/app/views/tiers/_form.html.erb
+++ b/app/views/tiers/_form.html.erb
@@ -1,5 +1,10 @@
 <div class="row">
   <div class="small-12 large-6 columns">
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </div>
+  
+  <div class="small-12 large-6 columns">
     <%= f.label :price %>
     <%= f.text_field :price %>
   </div>
